# agent-core

./: Cargo.toml  README.md  README_zh.md  _typos.toml  deny.toml
examples/: README.md  python_assistant.rs  python_assistant_tui.rs  system_prompt.md
specs/: 0001-spec.md
src/: agent.rs  config.rs  controller.rs  error.rs  lib.rs  mcp.rs  messages.rs  plan.rs  session.rs  tools.rs  utils.rs
