[package]
name = "agent-core"
version = "0.1.0"
authors = ["Your Name <YourName@yourdomain.com>"]
edition = "2024"
license = "MIT"
documentation = "https://docs.rs/"
repository = "https://github.com/TODO"
homepage = "https://github.com/TODO"
description = """

"""
readme = "README.md"
categories = ["development-tools"]
keywords = []

[dependencies]
# Core dependencies
anyhow = "1.0.99"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
thiserror = "2.0.16"
tokio = { version = "1.47", features = ["full"] }
uuid = { version = "1", features = ["serde", "v4"] }
tracing = { version = "0.1" }
futures = "0.3"
async-channel = "2.5"
chrono = { version = "0.4", features = ["serde"] }

# Codex-rs local dependencies
codex-common = { git = "https://github.com/openai/codex", tag = "rust-v0.23.0" }
codex-core = { git = "https://github.com/openai/codex", tag = "rust-v0.23.0" }
codex-login = { git = "https://github.com/openai/codex", tag = "rust-v0.23.0" }
codex-protocol = { git = "https://github.com/openai/codex", tag = "rust-v0.23.0" }
mcp-types = { git = "https://github.com/openai/codex", tag = "rust-v0.23.0" }

[features]
default = []
session = []
utils = []
