[package]
name = "agent-core"
version = "0.1.0"
authors = ["Your Name <YourName@yourdomain.com>"]
edition = "2024"
license = "MIT"
documentation = "https://docs.rs/"
repository = "https://github.com/TODO"
homepage = "https://github.com/TODO"
description = """

"""
readme = "README.md"
categories = ["development-tools"]
keywords = []

[dependencies]
# Core dependencies
anyhow = "1.0.99"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
thiserror = "2.0.16"
tokio = { version = "1.47", features = ["full"] }
uuid = { version = "1", features = ["serde", "v4"] }
tracing = { version = "0.1" }
futures = "0.3"
async-channel = "2.5"
chrono = { version = "0.4", features = ["serde"] }

# Codex-rs local dependencies
codex-common = { path = "codex/codex-rs/common" }
codex-core = { path = "codex/codex-rs/core" }
codex-login = { path = "codex/codex-rs/login" }
codex-protocol = { path = "codex/codex-rs/protocol" }
mcp-types = { path = "codex/codex-rs/mcp-types" }

[features]
default = []
session = []
utils = []
